service-kubia-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-01-24T21:37:00Z"
  name: kubia-nodeport
  namespace: default
  resourceVersion: "368491"
  uid: 8c7c1786-fc10-4f6a-870e-9f2f782d3397
spec:
  clusterIP: 10.106.15.130
  clusterIPs:
  - 10.106.15.130
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30123
    port: 8080
    targetPort: 8080
  selector:
    app: kubia
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
